# fastACE

./: .gitignore  CMakeLists.txt  LICENSE  README.md  agent.cpp  agent.h  compile.sh  economy.cpp  economy.h  firm.cpp  firm.h  makefile  person.cpp  person.h  test  test.cpp
docs/: code_explainer.md  explains_code.md  usage.md
functions/: base.h  linalg.h  solve.h  vectorInFloatOut.cpp  vectorInFloatOut.h
persons/: utilMaxer.cpp  utilMaxer.h  utilMaximizer.cpp  utilMaximizer.h
py/: .gitignore  main.py  train.py
src/: CMakeLists.txt  economy.cpp  firm.cpp  main.cpp  pybindings.cpp  pybindings.h
src/base/: CMakeLists.txt  agent.cpp  base.h  constants.h  economy.cpp  firm.cpp  offers.cpp  person.cpp  scenario.h  util.cpp  util.h
src/firms/: CMakeLists.txt  profitMaxer.cpp  profitMaxer.h
src/functions/: CMakeLists.txt  CMakeLists.withifopt.txt  solve.cpp  solve.h  vecToScalar.cpp  vecToScalar.h  vecToVec.cpp  vecToVec.h
src/neural/: CMakeLists.txt  advantageActorCritic.cpp  advantageActorCritic.h  decisionNetHandler.cpp  decisionNets.cpp  decisionNets.h  neuralConstants.h  neuralEconomy.cpp  neuralEconomy.h  neuralFirmDecisionMaker.cpp  neuralScenarios.cpp  neuralScenarios.h
src/persons/: CMakeLists.txt  utilMaxer.cpp  utilMaxer.h
src/pybindings/: pyfastACE.cpp
src/scenarios/: CMakeLists.txt  neuralScenarios.h  scenario.h
src/torch/: CMakeLists.txt  advantageActorCritic.cpp  advantageActorCritic.h  decisionNetHandler.cpp  decisionNetHandler.h  decisionNets.cpp  decisionNets.h  neuralConstants.h  neuralDecisionMaker.h  neuralEconomy.cpp  neuralEconomy.h  neuralFirmDecisionMaker.cpp  neuralFirmDecisionMaker.h  neuralPersonDecisionMaker.cpp  neuralPersonDecisionMaker.h  neuralScenarios.h
